# microservice-rust

./: .env  Cargo.toml
migrations/2024-05-09-231722_message/: up.sql
migrations/2024-05-09-232644_message/: down.sql  up.sql
src/: connect_to_db.rs  get_handlers.rs  main.rs  models.rs  post_handlers.rs  request_handlers.rs
