[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
url = "2.5.0"
diesel = { version = "1.0.0", features = ["postgres"] }
